# tagore2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/quyuan/: __init__.py  chrom_sizes.json  idiogram.py  irgsp1.csv  main.py
src/quyuan/tests/: 00_printif_test.py
